--- a/site/pom.xml
+++ b/site/pom.xml
@@ -81,6 +81,10 @@
             <groupId>com.github.theborakompanioni</groupId>
             <artifactId>thymeleaf-extras-shiro</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
