--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <slf4j.version>1.7.13</slf4j.version>
         <fastjson.version>1.2.0</fastjson.version>
         <jboss-logging>3.3.0.Final</jboss-logging>
-        <!--<javassist.version>3.19.0-GA</javassist.version>-->
+        <javassist.version>3.19.0-GA</javassist.version>
         <poi.version>3.14</poi.version>
         <junit>4.12</junit>
     </properties>
@@ -158,11 +158,11 @@
                 <scope>test</scope>
             </dependency>
 
-            <!--<dependency>-->
-                <!--<groupId>org.javassist</groupId>-->
-                <!--<artifactId>javassist</artifactId>-->
-                <!--<version>${javassist.version}</version>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${javassist.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.poi</groupId>
