--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <thymeleaf-spring4>2.1.4.RELEASE</thymeleaf-spring4>
         <thymeleaf-extras-shiro>1.2.1</thymeleaf-extras-shiro>
         <druid.version>1.0.12</druid.version>
-        <postgresql.version>9.4.1207</postgresql.version>
+        <postgresql.version>9.4-1205-jdbc42</postgresql.version>
         <aspectjweaver.version>1.8.7</aspectjweaver.version>
         <slf4j.version>1.7.13</slf4j.version>
         <fastjson.version>1.2.0</fastjson.version>
