--- a/site/src/test/resources/db.properties
+++ b/site/src/test/resources/db.properties
@@ -1,4 +1,4 @@
-db.jdbcURL=jdbc:postgresql://localhost:5432/testDB
+db.jdbcURL=jdbc:postgresql://localhost:5432/test
 db.username=postgres
-db.password=root
+db.password=postgres
 db.driver=org.postgresql.Driver
