--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,34 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <scm>
+        <url>https://github.com/homelessboy/afsd-framework</url>
+        <connection>scm:git:git@github.com:homelessboy/afsd-framework.git</connection>
+        <developerConnection>scm:git:git@github.com:homelessboy/afsd-framework.git</developerConnection>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>xuhui</id>
+            <name>XuHui</name>
+            <email>416422546@qq.com</email>
+            <roles>
+                <role>Manager</role>
+                <role>SoftwareEngineer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <description>
+        1. 提供 一个快速开发后台管理项目的基本框架，
+        2. 基于spring和hibernate，对spring-data-jpa进行相应支持。
+        3. 完成快速开发CRUD相关功能。
+    </description>
+
     <properties>
         <JDK>1.8</JDK>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
+
         <spring.version>4.2.2.RELEASE</spring.version>
         <spring.data.version>1.9.4.RELEASE</spring.data.version>
         <joda.time.version>2.9.2</joda.time.version>
@@ -141,9 +165,9 @@
                 <version>${hibernate.version}</version>
             </dependency>
             <!--<dependency>-->
-                <!--<groupId>org.hibernate.common</groupId>-->
-                <!--<artifactId>hibernate-commons-annotations</artifactId>-->
-                <!--<version>${hibernate.version}</version>-->
+            <!--<groupId>org.hibernate.common</groupId>-->
+            <!--<artifactId>hibernate-commons-annotations</artifactId>-->
+            <!--<version>${hibernate.version}</version>-->
             <!--</dependency>-->
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -253,58 +277,160 @@
 
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3.2</version>
-                    <configuration>
-                        <source>${JDK}</source>
-                        <target>${JDK}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.4.3</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>2.4</version>
-                </plugin>
-                <plugin>
-                    <groupId>com.sun.tools.xjc.maven2</groupId>
-                    <artifactId>maven-jaxb-plugin</artifactId>
-                    <version>1.1.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>hibernate3-maven-plugin</artifactId>
-                    <version>2.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.tomcat.maven</groupId>
-                    <artifactId>tomcat7-maven-plugin</artifactId>
-                    <version>2.2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-
         <plugins>
+            <!-- 设置项目编译属性 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${JDK}</source>
+                    <target>${JDK}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <!-- resources插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <!-- 构建项目站点报告插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.4</version>
+                <configuration>
+                    <locales>zh_CN</locales>
+                    <outputEncoding>UTF-8</outputEncoding>
+                </configuration>
+            </plugin>
+
+            <!-- release插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+
+    <!-- 自动生成报告 -->
+    <reporting>
+        <plugins>
+            <!--聚合源代码-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
+                <reportSets>
+                    <reportSet>
+                        <id>aggregate</id>
+                        <inherited>false</inherited>
+                        <reports>
+                            <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+
+            <!-- 项目信息 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.6</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>index</report>
+                            <report>dependencies</report>
+                            <report>project-team</report>
+                            <report>issue-tracking</report>
+                            <report>license</report>
+                            <report>scm</report>
+                            <report>cim</report>
+                            <report>modules</report>
+                            <report>plugins</report>
+                            <report>help</report>
+                            <report>summary</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+
+            <!-- 检查代码规范报告 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.15</version>
+                <configuration>
+                    <!-- 使用maven社区代码风格 -->
+                    <configLocation>config/maven_checks.xml</configLocation>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- 代码隐藏bug检查 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.6</version>
+                <configuration>
+                    <!-- 多模块聚合 -->
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
+
+            <!-- java doc报表-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <configuration>
+                    <locale>zh_CN</locale>
+                </configuration>
+                <reportSets>
+                    <reportSet><!-- by default, id = "default" -->
+                        <reports><!-- select non-aggregate reports -->
+                            <report>javadoc</report>
+                            <report>test-javadoc</report>
+                        </reports>
+                    </reportSet>
+                    <reportSet><!-- aggregate reportSet, to define in poms having modules -->
+                        <id>aggregate</id>
+                        <inherited>false</inherited><!-- don't run aggregate in child modules -->
+                        <reports>
+                            <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+
+    <distributionManagement>
+        <site>
+            <id>test</id>
+            <name>testname</name>
+            <url>file:///E:/test</url>
+        </site>
+        <repository>
+            <id>releases</id>
+            <name>Internal Releases</name>
+            <url>http://192.168.2.231/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Internal Snapshots</name>
+            <url>http://192.168.2.231/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
