--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.afsd</groupId>
@@ -13,7 +11,8 @@
         <url>https://github.com/homelessboy/afsd-framework</url>
         <connection>scm:git:git@github.com:homelessboy/afsd-framework.git</connection>
         <developerConnection>scm:git:git@github.com:homelessboy/afsd-framework.git</developerConnection>
-    </scm>
+      <tag>0.0.1</tag>
+  </scm>
 
     <developers>
         <developer>
