调整框架与样例 调整pom结构 调整doc

--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>me-afsd-framework</artifactId>
         <groupId>me.afsd</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -28,6 +28,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
         </dependency>
     </dependencies>
 </project>
