--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>me-afsd-framework</artifactId>
         <groupId>me.afsd</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,6 +13,10 @@
         <dependency>
             <groupId>me.afsd</groupId>
             <artifactId>me-afsd-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
         </dependency>
     </dependencies>
 </project>
